--- a/git/index.css
+++ b/git/index.css
@@ -1,6 +1,9 @@
 body#home{
     color: #4e443c;
     background: #f0efe7 url(/git/body.jpg);
+	font-family: Georgia,"Times New Roman",serif !important;
+	font-size: 14px;
+	line-height: 22px;
 }
 
 .inner{
